@@ -241,6 +241,9 @@ BUGFIXES:
   ZOOKEEPER-2340: JMX is disabled even if JMXDISABLE is false
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-2252: Random test case failure in
+  org.apache.zookeeper.test.StaticHostProviderTest (Timothy Ward via cnauroth)
+
 IMPROVEMENTS:
   ZOOKEEPER-1660 Documentation for Dynamic Reconfiguration (Reed Wanderman-Milne via shralex)  
 
